# postgresql-multimodal-retrieval

./: .gitignore  .pre-commit-config.yaml  README.md  compute_embeddings.py  environment.yaml  flet_app.py  gradio_app.py  pyproject.toml  query.py  requirements.txt
images/: diagram.drawio
notebooks/: clip_embeddings.ipynb  compute_embedding_into_progress.ipynb  load_dataset_into_postgres.ipynb  query.ipynb
src/database/: __init__.py  postgresql.py
src/datasets/: __init__.py  hugging_face_datasets.py
src/pgmmr/database/: __init__.py  postgresql.py
src/pgmmr/datasets/: __init__.py  hugging_face_datasets.py
src/pgmmr/models/: __init__.py  clip.py
src/pgmmr/retrievers/: __init__.py  hybrid_search.py  result.py
