[project]
name = "postgresql-multimodal-retrieval"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "dnth", email = "dickson.neoh@gmail.com"}]
requires-python = ">= 3.10"
dependencies = ["pgvector>=0.3.2,<0.4", "tqdm>=4.66.4,<4.67", "transformers>=4.41.2,<4.42", "huggingface-hub"]

[system-requirements]
cuda = "11"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["nvidia", "conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pgmmr = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.2.2,<2.3"
psycopg = ">=3.2.1,<3.3"
loguru = ">=0.7.2,<0.8"
torchvision = ">=0.18.1,<0.19"
torchaudio = ">=2.3.1,<2.4"
pytorch = ">=2.3.1,<2.4"
datasets = ">=2.20.0,<2.21"
